--- a/LF2Clone.csproj
+++ b/LF2Clone.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Raylib-cs" Version="6.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Assets\UI\Buttons\" />
+  </ItemGroup>
+
 </Project>
