Added starting resolution to configuration.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,9 @@
       "LogLevel": "Debug"
     }
   },
-  "Version": "0.0.1"
+  "Version": "0.0.1",
+  "StartingScreenResolution": {
+    "Width": 1920,
+    "Height": 1080
+  }
 }
