--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,10 @@
   },
   "Version": "0.0.1",
   "StartingScreenResolution": {
-    "Width": 1920,
-    "Height": 1080
-  }
+    "Width": 960,
+    "Height": 540
+  },
+  "Fullscreen": "false",
+  "BorderlessWindowed": "false",
+  "UseDefaultScreenResolution": "false"
 }
