Changed logger. System initialization. Logging to file.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
       "LogLevel": "Debug"
     }
   },
-  "LoggingFilePath": "\\..\\..\\Logs\\",
+  "LoggingFilePath": "..\\..\\..\\Logs",
   "Version": "0.0.1",
   "StartingScreenResolution": {
     "Width": 960,
