--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
       "LogLevel": "Debug"
     }
   },
+  "LoggingDaysOfLife": 7,
   "LoggingFilePath": "..\\..\\..\\Logs",
   "Version": "0.0.1",
   "StartingScreenResolution": {
