--- a/LF2Clone.csproj
+++ b/LF2Clone.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Assets\Shaders\" />
     <Folder Include="Assets\UI\Buttons\" />
     <Folder Include="Logs\" />
   </ItemGroup>
